force-app/main/default/objects/copado__Environmental_Variable__c/copado__Environmental_Variable__c.object-meta.xml
<CustomObject>
    <label>Environment Variable</label>
    <nameField>
        <label>Environment Variable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Environment Variables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>