force-app/main/default/objects/copado__Environmental_Variable__c/fields/copado__Environment__c.field-meta.xml
<CustomField>
    <fullName>copado__Environment__c</fullName>
    <label>Environment</label>
    <referenceTo>copado__Environment__c</referenceTo>
    <relationshipName>Environmental_Variables</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>