force-app/main/default/objects/copado__Environmental_Variable__c/fields/copado__Scope__c.field-meta.xml
<CustomField>
    <fullName>copado__Scope__c</fullName>
    <description>Use this field to define a Scope for this Environment Variable. For more information, please check our documentation about Environment Variables Scope.</description>
    <inlineHelpText>Use this field to define a Scope for this Environment Variable. For more information, please check our documentation about Environment Variables Scope.</inlineHelpText>
    <label>Scope</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>