force-app/main/default/objects/copado__Environmental_Variable__c/validationRules/copado__Value_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>copado__Value_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( copado__Value__c )</errorConditionFormula>
    <errorDisplayField>copado__Value__c</errorDisplayField>
    <errorMessage>Value is required</errorMessage>
</ValidationRule>